--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "react": "^19.2.0",
-    "lucide-react": "0.263.1",
+    "react-dom": "^19.2.0",
+
+    // lucide-reactni yangiladik
+    "lucide-react": "^0.441.0",
+
     "recharts": "2.12.0",
-    "@google/genai": "0.1.1",
-    "react-dom": "^19.2.0"
+    "@google/genai": "0.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
